--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,9 +12,18 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GetNoted">
         <activity
+            android:name=".SignIn"
+            android:exported="false"
+            android:label="@string/title_activity_sign_in"
+            android:theme="@style/Theme.GetNoted" />
+        <activity
+            android:name=".SignUp"
+            android:exported="false"
+            android:label="@string/title_activity_sign_up"
+            android:theme="@style/Theme.GetNoted" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.GetNoted">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
