--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GetNoted">
         <activity
-            android:name=".SignIn"
+            android:name=".ui.SignIn"
             android:exported="false"
             android:label="@string/title_activity_sign_in"
             android:theme="@style/Theme.GetNoted" />
         <activity
-            android:name=".SignUp"
+            android:name=".ui.SignUp"
             android:exported="false"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/Theme.GetNoted" />
